# vision

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  build-opencv.fish  build.gradle  gradle.properties
VIDEO_DATA/: AimingView.frame  AimingView.info  AimingView.overlay  BirdseyeBall.info  BirdseyeHatch.info  BirdseyeNorth.info  BirdseyeSouth.info  EagleEyeNorth.info  EagleeyeSouth.info  ExampleView.frame  ExampleView.info  ExampleView.overlay  ForwardView.frame  ForwardView.info  ForwardView.overlay
cpp/: CMakeLists.txt  thing.properties
cpp/src/: calibration.cpp  calibration.hpp  main.cpp  process.cpp  process.hpp  run.cpp  run.hpp  sample_to_mat.hpp
doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-21.html  index-22.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
doc/org/usfirst/frc/team2077/video/: Main.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
doc/org/usfirst/frc/team2077/video/class-use/: Main.html
doc/org/usfirst/frc/team2077/video/core/: CompositeView.html  DefaultRendering.html  DefaultView.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
doc/org/usfirst/frc/team2077/video/core/class-use/: CompositeView.html  DefaultRendering.html  DefaultView.html
doc/org/usfirst/frc/team2077/video/interfaces/: RenderedView.html  Rendering.html  RenderingProjection.html  SourceProjection.html  VideoSource.html  VideoView.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
doc/org/usfirst/frc/team2077/video/interfaces/class-use/: RenderedView.html  Rendering.html  RenderingProjection.html  SourceProjection.html  VideoSource.html  VideoView.html
doc/org/usfirst/frc/team2077/video/projections/: AbstractProjection.html  Birdseye.html  CubeMap3x2.html  Equidistant.html  Equirectangular.html  Equisolid.html  InverseTangentProjection.html  Orthographic.html  Perspective.html  SineProjection.html  Stereographic.html  TangentProjection.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
doc/org/usfirst/frc/team2077/video/sources/: AbstractSource.html  GstreamerSource.html  MjpegSource.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
doc/org/usfirst/frc/team2077/video/test/: FisheyeCalibration.CalibrationPoint.html  FisheyeCalibration.CameraProjection.Equidistant.html  FisheyeCalibration.CameraProjection.Sine.html  FisheyeCalibration.CameraProjection.Tangent.html  FisheyeCalibration.CameraProjection.html  FisheyeCalibration.html  FloorPlaneImageGenarator.html  GIFImageSource.html  HSL360ImageGenerator.html  ImageSource.html  LensTable.html  MappedViewSource.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
doc/org/usfirst/frc/team2077/vision/: VisionMain.EmptyFrameProcessor.html  VisionMain.FrameProcessor.html  VisionMain.FrameProcessorSequence.html  VisionMain.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
doc/org/usfirst/frc/team2077/vision/class-use/: VisionMain.EmptyFrameProcessor.html  VisionMain.FrameProcessor.html  VisionMain.FrameProcessorSequence.html  VisionMain.html
doc/org/usfirst/frc/team2077/vision/processors/: Example.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
doc/org/usfirst/frc/team2077/vvcommon/: MappedFrameInfo.html  Utilities.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
doc/org/usfirst/frc/team2077/vvcommon/class-use/: MappedFrameInfo.html  Utilities.html
src/: overview.html
src/main/java/org/usfirst/frc/team2077/: FrameCounter.java  Startup.java
src/main/resources/: aiming2020-multi.properties  aiming2020.properties  aimingFE2020.properties  aimingFEThree2020.properties  aimingFEThree2020_AJTESTING.properties  aimingFETwo2020.properties  camera.properties  eyeball.properties  globe.properties  hello-gstreamer.properties  hello-linux.properties  hello2.properties  logback.xml  pizza.properties  pizzaTest.properties  pse.properties  save.properties  vator.properties  vator1.properties  vator2.properties  vator3.properties  vator4.properties  vator5.properties  vator6.properties  vatorFour.properties  vatorPZ.properties  vision.properties
src/main/resources/calibration/: pizza-south-calibration.txt
src/org/usfirst/frc/team2077/video/: Main.java  NTMain.java
src/org/usfirst/frc/team2077/video/core/: CompositeView.java  package-info.java
src/org/usfirst/frc/team2077/video/interfaces/: RenderedView.java  Rendering.java  RenderingProjection.java  SourceProjection.java  VideoSource.java  package-info.java
src/org/usfirst/frc/team2077/video/projections/: AbstractProjection.java  Birdseye.java  CubeMap3x2.java  Equirectangular.java  Equisolid.java  Orthographic.java
src/org/usfirst/frc/team2077/video/sources/: package-info.java
src/org/usfirst/frc/team2077/video/test/: FloorPlaneImageGenarator.java  ImageSource.java  LensTable.java
src/org/usfirst/frc/team2077/vision/: Main.java  NTMain.java
src/org/usfirst/frc/team2077/vision/processors/: AimingOverlay.java  Example.java  HatchBirdseyeOverlay.java
src/org/usfirst/frc/team2077/vvcommon/: MappedFrameInfo.java  Utilities.java
src/resources/: NS540.xcf  aiming2020-multi.properties  aimingFE2020.properties  gstreamer-cube.properties  hello-windows.properties  pizza.properties  test-360.properties  test-birdseye.properties  vator1.properties  vator4.properties  vatorPZ.properties  vatorReplay.properties  views-360.properties
src/resources/calibration/: pizza-east-calibration.txt  pizza-west-calibration.txt
(+138 files in other folders)
